[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5"}
tokio  =  {version = "1.39.3", features = ["full"]}
zip = {version = "2.2.0"}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }