[package]
name = "edblock"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
local-ip-address = "*"
chrono = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
rocksdb = "0.22.0"
tokio  =  {version = "1.39.3", features = ["full"]}

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]