[package]
name = "p2p-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio  =  {version = "1.39.3", features = ["full"]}
clap   =  {version = "4.5.16", features = ["derive"]}
sha2   =  {version =  "0.10.8"}
chrono =  {version = "0.4.38"}
crossbeam-channel = {version = "0.5"}

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
