[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.2"
tokio = { version = "1", features = ["full"]}
prost = "0.13.1"
tonic-reflection = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"